--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Привіт друзі!!!
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+    <title>Юрій</title>
+  </head>
+  <body>
+    Привіт!!!!
+  </body>
+</html>
