--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1>Привіт МАМА!!!!</h1>
+<i><center><h1>Minecraft</h1> </center></i>
+
+<center><a href="https://ru-m.org/engine/download.php?id=31204">Скачати</a></center>
