--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<i><center><h1>Minecraft</h1> </center></i>
-
-<center><a href="https://ru-m.org/engine/download.php?id=31204">Скачати</a></center>
+<!DOCTYPE html>
+<html lang="uk">
+    <head>
+        <meta charset="utf-8">
+        <title>Сайт Юри Івацка про Minecraft</title>
+	</head>
+	<body style="text-align: center;">
+		<h1><i>Minecraft</i></h1>
+		<a href="https://ru-m.org/engine/download.php?id=31204">Скачати</a>
+		<hr>
+		<button onclick="alert('Ви програли!');"><img src="images/box.gif" alt="Box" style="vertical-align: middle">1</button>
+		<button onclick="alert('Ви виграли!');"><img src="images/box.gif" alt="Box" style="vertical-align: middle">2</button>
+	</body>
+</html>
