--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<h1><i>Minecraft</i></h1>
 		<a href="https://ru-m.org/engine/download.php?id=31204">Скачати</a>
 		<hr>
-		<button onclick="alert('Ви програли!');"><img src="images/box.gif" alt="Box" style="vertical-align: middle">1</button>
-		<button onclick="alert('Ви виграли!');"><img src="images/box.gif" alt="Box" style="vertical-align: middle">2</button>
+		<button onclick="alert('Ви програли');"><img src="box.gif" alt="Box" style="vertical-align: middle">1</button>
+		<button onclick="alert('Ви виграли!');"><img src="box.gif" alt="Box" style="vertical-align: middle">2</button>
+		<button onclick="alert('Ви програли');"><img src="box.gif" alt="Box" style="vertical-align: middle">3</button>
 	</body>
 </html>
