--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 		<a href="https://ru-m.org/engine/download.php?id=31204">Скачати</a>
 		<hr>
 		<button onclick="alert('Ви програли');"><img src="box.gif" alt="Box" style="vertical-align: middle">1</button>
-		<button onclick="alert('Ви виграли!');"><img src="box.gif" alt="Box" style="vertical-align: middle">2</button>
+		<button onclick="alert('********  Ви виграли!  *********');"><img src="box.gif" alt="Box" style="vertical-align: middle">2</button>
 		<button onclick="alert('Ви програли');"><img src="box.gif" alt="Box" style="vertical-align: middle">3</button>
+		
+		<button onclick="alert('Ви виграли');"><img src="box.gif" alt="Box" style="vertical-align: middle">4</button>
+		<button onclick="alert('Привіт Вова на жаль ти програв');"><img src="box.gif" alt="Box" style="vertical-align: middle">5</button>
+		<button onclick="alert('Ви програли');"><img src="box.gif" alt="Box" style="vertical-align: middle">6</button>
 	</body>
 </html>
