--- a/bashe.html
+++ b/bashe.html
@@ -6,6 +6,6 @@
 	</head>
 	<body style="text-align: center;">
 		<h1><i>Гра "Баше"</i></h1>
-		
+		<input type="checkbox" checked>	
 	</body>
 </html>
