--- a/bashe.html
+++ b/bashe.html
@@ -12,15 +12,15 @@
 				display: inline-block;
 				width: 110px;
 				height: 110px;
-				background-image: url("box.gif");
+				background-image: url("/box.gif");
 				
 			}
 			.box:checked + .box-label{
-				background-image: url("coint1.jpg");
+				background-image: url("/coint1.jpg");
 				background-size: 100%;
 			}
 			.box:checked + .bomb{
-				background-image: url("bomb.gif");
+				background-image: url("/bomb.gif");
 			}
 		</style>
 	</head>
