--- a/bashe.html
+++ b/bashe.html
@@ -32,6 +32,60 @@
 		<input type="checkbox" id="p_2" class="box">
 		<label for="p_2" class="box-label"></label>
 		
+		<input type="checkbox" id="p_3" class="box">
+		<label for="p_3" class="box-label"></label>
+		
+	    <input type="checkbox" id="p_4" class="box">
+		<label for="p_4" class="box-label"></label>
+		
+		<input type="checkbox" id="p_5" class="box">
+		<label for="p_5" class="box-label"></label>
+		
+		<input type="checkbox" id="p_6" class="box">
+		<label for="p_6" class="box-label"></label>
+		
+		<input type="checkbox" id="p_7" class="box">
+		<label for="p_7" class="box-label"></label>
+		
+	    <input type="checkbox" id="p_8" class="box">
+		<label for="p_8" class="box-label"></label>
+		
+		<input type="checkbox" id="p_9" class="box">
+		<label for="p_9" class="box-label"></label>
+		
+		<input type="checkbox" id="p_10" class="box">
+		<label for="p_10" class="box-label"></label>
+		
+		<input type="checkbox" id="p_11" class="box">
+		<label for="p_11" class="box-label"></label>
+		
+	    <input type="checkbox" id="p_12" class="box">
+		<label for="p_12" class="box-label"></label>
+		
+		<input type="checkbox" id="p_13" class="box">
+		<label for="p_13" class="box-label"></label>
+		
+		<input type="checkbox" id="p_14" class="box">
+		<label for="p_14" class="box-label"></label>
+		
+		<input type="checkbox" id="p_15" class="box">
+		<label for="p_15" class="box-label"></label>
+		
+	    <input type="checkbox" id="p_16" class="box">
+		<label for="p_16" class="box-label"></label>
+		
+		<input type="checkbox" id="p_17" class="box">
+		<label for="p_17" class="box-label"></label>
+		
+		<input type="checkbox" id="p_18" class="box">
+		<label for="p_18" class="box-label"></label>
+		
+	    <input type="checkbox" id="p_19" class="box">
+		<label for="p_19" class="box-label"></label>	
+		
+		<input type="checkbox" id="p_20" class="box">
+		<label for="p_20" class="box-label"></label>
+		
 		<input type="checkbox" id="p_21" class="box">
 		<label for="p_21" class="box-label bomb"></label>
 	</body>
