--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 			<a href="/test.html">Тестова</a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="/bashe.html">Гра "Баше"</a>
 		</div>
+		<div style="background: white;">
 		<a href="https://ru-m.org/engine/download.php?id=31204">Скачати Minecraft</a>
+			<h2>Мої проекти</h2> 
+			<a target="_blank" href="https://scratch.mit.edu/projects/355804367/">Рок-гурт</a><br>
+		<a target="_blank" href="https://scratch.mit.edu/projects/364365159/">Космос</a><br>
+			
+			</div>
 	</body>
 </html>
